// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx-stories no-name.mdx 1`] = `
Object {
  "components": Object {
    "2855216c2faa4ab43ed978e3ff6743e4": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "name": "Button",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "2855216c2faa4ab43ed978e3ff6743e4",
    },
    "date": 2020-10-21T01:23:26.441Z,
    "dateModified": 2020-10-21T01:23:26.441Z,
    "package": "b29a0e49c5ef1bad8c8d49f9bbe91430",
    "title": "Storybook/MDX",
  },
  "packages": Object {
    "b29a0e49c5ef1bad8c8d49f9bbe91430": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "b29a0e49c5ef1bad8c8d49f9bbe91430",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/no-name.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {},
  "transformed": "
    
    import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" component={Button} />

<Story>
  <Button />
</Story>
",
}
`;

exports[`mdx-stories props-argument.mdx 1`] = `
Object {
  "components": Object {
    "adb0a7ff2c278d595f4ce67bb4b42887": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "name": "Button",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "adb0a7ff2c278d595f4ce67bb4b42887",
    },
    "date": 2020-10-21T01:23:26.441Z,
    "dateModified": 2020-10-21T01:23:26.441Z,
    "package": "4da0570dc7f50cc938725dc7a4736505",
    "title": "Storybook/MDX",
  },
  "packages": Object {
    "4da0570dc7f50cc938725dc7a4736505": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "4da0570dc7f50cc938725dc7a4736505",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/props-argument.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "storyWithProps": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "name": "props",
          "value": "props",
        },
      ],
      "id": "storyWithProps",
      "loc": Object {
        "end": Object {
          "column": 57,
          "line": 13,
        },
        "start": Object {
          "column": 38,
          "line": 13,
        },
      },
      "name": "story-with-props",
      "source": "props => <Button />",
    },
  },
  "transformed": "
    
    import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" component={Button} />

<Story name=\\"story-with-props\\">
  {props => <Button />}
</Story>

",
}
`;

exports[`mdx-stories story.mdx 1`] = `
Object {
  "components": Object {
    "ceea0565a65f75c8c7b6b355d6d335ac": Object {
      "from": "../../components/button-default-arrow-func",
      "importedName": "default",
      "imports": Object {
        "react": Array [
          Object {
            "importedName": "default",
            "name": "React",
          },
        ],
      },
      "loc": Object {
        "end": Object {
          "column": 65,
          "line": 3,
        },
        "start": Object {
          "column": 15,
          "line": 3,
        },
      },
      "name": "Button",
      "package": "ceea0565a65f75c8c7b6b355d6d335ac",
      "request": "/Users/atanasster/component-controls/core/instrument/test/fixtures/components/button-default-arrow-func.js",
      "source": "import React from 'react';

const Button = props => <button>{\`Hello, \${props.name}\`}</button>;

export default Button;
",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "ceea0565a65f75c8c7b6b355d6d335ac",
    },
    "date": 2020-10-21T01:23:26.441Z,
    "dateModified": 2020-10-21T01:23:26.441Z,
    "package": "64b354f73c75e0bb54ecee01220c65ec",
    "title": "Storybook/MDX",
  },
  "packages": Object {
    "64b354f73c75e0bb54ecee01220c65ec": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "64b354f73c75e0bb54ecee01220c65ec",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/story.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
    "ceea0565a65f75c8c7b6b355d6d335ac": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "ceea0565a65f75c8c7b6b355d6d335ac",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/components/button-default-arrow-func.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "smartStory": Object {
      "id": "smartStory",
      "loc": Object {
        "end": Object {
          "column": 6,
          "line": 15,
        },
        "start": Object {
          "column": 32,
          "line": 13,
        },
      },
      "name": "smart story",
      "source": "<Button />",
    },
  },
  "transformed": "
    
    import { Story, Meta } from '@component-controls/blocks';
import Button from '../../components/button-default-arrow-func';


<Meta title=\\"Storybook/MDX\\" component={Button} />

<Story name=\\"smart story\\">
  <Button />
</Story>

",
}
`;

exports[`mdx-stories three-levels-alias.mdx 1`] = `
Object {
  "components": Object {
    "c63d685efb0c65f18ffc63184e852ef4": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "name": "Button",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "c63d685efb0c65f18ffc63184e852ef4",
    },
    "date": 2020-10-21T01:23:26.441Z,
    "dateModified": 2020-10-21T01:23:26.441Z,
    "package": "3995fd670fa3627d8fc37155479f45c9",
    "title": "Storybook/MDX",
  },
  "packages": Object {
    "3995fd670fa3627d8fc37155479f45c9": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "3995fd670fa3627d8fc37155479f45c9",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/three-levels-alias.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "storyWithProps": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 4,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 23,
                  "line": 1,
                },
                "start": Object {
                  "column": 8,
                  "line": 1,
                },
              },
              "name": "name",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 15,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 10,
                      "line": 1,
                    },
                  },
                  "name": "first",
                  "value": "first",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 21,
                      "line": 1,
                    },
                    "start": Object {
                      "column": 17,
                      "line": 1,
                    },
                  },
                  "name": "last",
                  "value": "last",
                },
              ],
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 5,
                  "line": 3,
                },
                "start": Object {
                  "column": 2,
                  "line": 3,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "id": "storyWithProps",
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 18,
        },
        "start": Object {
          "column": 9,
          "line": 14,
        },
      },
      "name": "story-with-props",
      "source": "({
  name: { first, last },

  age,
}) => <Button />",
    },
  },
  "transformed": "
    
    import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" component={Button} />

<Story name=\\"story-with-props\\">
  {({ name: { first, last }, age }) => <Button />}
</Story>

",
}
`;

exports[`mdx-stories tw0-levels-sub-arguments.mdx 1`] = `
Object {
  "components": Object {
    "88c2f5883a4daf6051d3f8a38ce7bf75": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "name": "Button",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "88c2f5883a4daf6051d3f8a38ce7bf75",
    },
    "date": 2020-10-21T01:23:26.441Z,
    "dateModified": 2020-10-21T01:23:26.441Z,
    "package": "c905face9d8a864f8419fa636d268a20",
    "title": "Storybook/MDX",
  },
  "packages": Object {
    "c905face9d8a864f8419fa636d268a20": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "c905face9d8a864f8419fa636d268a20",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/tw0-levels-sub-arguments.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "storyWithProps": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "value": "name",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 12,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "id": "storyWithProps",
      "loc": Object {
        "end": Object {
          "column": 67,
          "line": 13,
        },
        "start": Object {
          "column": 38,
          "line": 13,
        },
      },
      "name": "story-with-props",
      "source": "({ name, age }) => <Button />",
    },
  },
  "transformed": "
    
    import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" component={Button} />

<Story name=\\"story-with-props\\">
  {({ name, age }) => <Button />}
</Story>
",
}
`;

exports[`mdx-stories two-arguments.mdx 1`] = `
Object {
  "components": Object {
    "fe664c2ffbbcacffdac896ace94db697": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "name": "Button",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "fe664c2ffbbcacffdac896ace94db697",
    },
    "date": 2020-10-21T01:23:26.441Z,
    "dateModified": 2020-10-21T01:23:26.441Z,
    "package": "0b289894317c97c742b92505a4f795c5",
    "title": "Storybook/MDX",
  },
  "packages": Object {
    "0b289894317c97c742b92505a4f795c5": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "0b289894317c97c742b92505a4f795c5",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/two-arguments.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "storyWithProps": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 6,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": "props",
          "value": "props",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 15,
              "line": 0,
            },
            "start": Object {
              "column": 8,
              "line": 0,
            },
          },
          "name": "context",
          "value": "context",
        },
      ],
      "id": "storyWithProps",
      "loc": Object {
        "end": Object {
          "column": 68,
          "line": 13,
        },
        "start": Object {
          "column": 38,
          "line": 13,
        },
      },
      "name": "story-with-props",
      "source": "(props, context) => <Button />",
    },
  },
  "transformed": "
    
    import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" component={Button} />

<Story name=\\"story-with-props\\">
  {(props, context) => <Button />}
</Story>
",
}
`;

exports[`mdx-stories two-levels-alias.mdx 1`] = `
Object {
  "components": Object {
    "0a73df5cffa26ca62ec534813a77384f": Object {
      "from": "../components/BaseButton",
      "importedName": "default",
      "name": "Button",
    },
  },
  "doc": Object {
    "component": "Button",
    "componentsLookup": Object {
      "Button": "0a73df5cffa26ca62ec534813a77384f",
    },
    "date": 2020-10-21T01:23:26.441Z,
    "dateModified": 2020-10-21T01:23:26.441Z,
    "package": "4ff26e593a393f9612e5c89b1e8bd1f3",
    "title": "Storybook/MDX",
  },
  "packages": Object {
    "4ff26e593a393f9612e5c89b1e8bd1f3": Object {
      "dependencies": Object {
        "@babel/generator": "^7.9.4",
        "@babel/parser": "^7.9.4",
        "@babel/traverse": "^7.9.0",
        "@component-controls/core": "^1.36.6",
        "@hutson/parse-repository-url": "^5.0.0",
        "@mdx-js/loader": "^1.5.5",
        "@mdx-js/react": "^1.6.5",
        "camelcase": "^6.0.0",
        "deepmerge": "^4.2.2",
        "find-cache-dir": "^3.3.1",
        "gray-matter": "^4.0.2",
        "hosted-git-info": "^3.0.4",
        "js-string-escape": "^1.0.1",
        "prettier": "^1.19.1",
        "read-package-json": "^2.1.1",
        "remark-emoji": "^2.1.0",
        "remark-images": "^2.0.0",
        "resolve": "^1.15.1",
        "typescript": "^4.0.5",
      },
      "devDependencies": Object {
        "@babel/types": "^7.9.0",
        "@component-controls/ts-markdown-docs": "^1.21.0",
        "@rollup/plugin-node-resolve": "^7.1.1",
        "@types/find-cache-dir": "^3.2.0",
        "@types/hosted-git-info": "^3.0.0",
        "@types/jest": "^26.0.10",
        "cross-env": "^5.2.1",
        "eslint": "^6.5.1",
        "jest": "^26.4.2",
      },
      "fileHash": "4ff26e593a393f9612e5c89b1e8bd1f3",
      "name": "@component-controls/instrument",
      "peerDependencies": undefined,
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/mdx/stories/two-levels-alias.mdx",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.36.7",
    },
  },
  "stories": Object {
    "storyWithProps": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 22,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "value": "MyName",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 0,
                },
                "start": Object {
                  "column": 17,
                  "line": 0,
                },
              },
              "name": "age",
              "value": "age",
            },
          ],
        },
      ],
      "id": "storyWithProps",
      "loc": Object {
        "end": Object {
          "column": 46,
          "line": 14,
        },
        "start": Object {
          "column": 9,
          "line": 14,
        },
      },
      "name": "story-with-props",
      "source": "({ name: MyName, age }) => <Button />",
    },
  },
  "transformed": "
    
    import { Story, Meta } from '@component-controls/blocks';
import Button from '../components/BaseButton';


<Meta title=\\"Storybook/MDX\\" component={Button} />

<Story name=\\"story-with-props\\">
  {({ name: MyName, age }) => <Button />}
</Story>
",
}
`;
